@@ -44,68 +44,50 @@
 #include "src/common/xstring.h"
 #include "src/plugins/select/bluegene/bg_read_config.h"
 
-/* These are here to avoid linking issues with the bridge for
- * unresolved symbols.
+/* These are here to avoid direct linking issues with the bluegene plugin.
  */
-time_t last_job_update;
-time_t last_bg_update;
-bg_config_t *bg_conf;
-bg_lists_t *bg_lists;
-pthread_mutex_t block_state_mutex = PTHREAD_MUTEX_INITIALIZER;
-int bg_recover = 1;
-int blocks_are_created = 0;
-bool have_db2 = false;
-int num_unused_cpus;
 
-extern int bridge_init(char *properties_file)
+extern int slurm_drain_nodes(char *node_list, char *reason, uint32_t reason_uid)
 {
-	return SLURM_ERROR;
+	return SLURM_SUCCESS;
 }
 
-extern int bridge_fini()
+extern int job_fail(uint32_t job_id)
 {
-	return SLURM_ERROR;
+	return SLURM_SUCCESS;
 }
 
-extern int bridge_get_size(int *size)
+extern int slurm_fail_job(uint32_t job_id)
 {
-	return SLURM_ERROR;
+	return SLURM_SUCCESS;
 }
 
-extern int bridge_setup_system()
+extern void lock_slurmctld(int lock_levels)
 {
-	return SLURM_ERROR;
 }
 
-extern int bridge_free_bg(my_bluegene_t *bg)
+extern void unlock_slurmctld(int lock_levels)
 {
-	return SLURM_ERROR;
 }
 
-extern int bridge_get_bg(my_bluegene_t **bg)
+extern int drain_nodes(char *nodes, char *reason, uint32_t reason_uid)
 {
-	return SLURM_ERROR;
+	return SLURM_SUCCESS;
 }
 
-#ifdef HAVE_BG_FILES
-extern int bridge_get_data(rm_element_t* element,
-			   enum rm_specification field, void *data)
+extern int job_requeue (uid_t uid, uint32_t job_id, slurm_fd_t conn_fd,
+			uint16_t protocol_version, bool preempt)
 {
-	return SLURM_ERROR;
+	return SLURM_SUCCESS;
 }
-#else
-extern int bridge_get_data(void* element,
-			   int field, void *data)
-{
-	return SLURM_ERROR;
-}
-#endif
 
-extern int add_bg_record(List records, List *used_nodes,
-			 select_ba_request_t *blockreq,
-			 bool no_check, bitoff_t io_start)
+extern struct job_record *find_job_record(uint32_t job_id)
 {
-	return SLURM_ERROR;
+	return NULL;
+}
+
+extern void trigger_block_error(void)
+{
 }
 
 ///////////////////////////////////////////////////////////////////////
